Enabling dark mode

--- a/src/oed-testdata.client/index.html
+++ b/src/oed-testdata.client/index.html
@@ -7,7 +7,7 @@
     <title>DD Testdata</title>
     <link rel="stylesheet" href="https://altinncdn.no/fonts/inter/inter.css" />
   </head>
-  <body>
+  <body id="body" data-color-scheme="auto">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
